# algorithms-project-69

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
search_engine/: search_engine.py
tests/: test_search.py
